<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mode_color_white_2"
    tools:context=".activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="56dp"
        android:layout_gravity="center"
        android:gravity="center">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_your_password"
            android:layout_marginTop="56dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="24sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textStyle="bold"
                android:text="@string/enter_your_verification_code"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="3dp"
            android:background="@drawable/login_border"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >


                <EditText
                    android:id="@+id/activity_reset_password_by_phone_verification_code"
                    style="@style/login_editText"
                    android:inputType="number"
                    android:hint="@string/your_verification_code"/>


                <ImageView
                    style="@style/login_icon_image_view"
                    android:src="@drawable/user_icon" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textStyle="bold"
                android:text="@string/enter_your_new_password"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="3dp"
            android:background="@drawable/login_border"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >


                <EditText
                    android:id="@+id/activity_reset_password_by_phone_new_password"
                    style="@style/login_editText"
                    android:inputType="textPassword"
                    android:hint="@string/new_password_field"/>


                <ImageView
                    style="@style/login_icon_image_view"
                    android:src="@drawable/user_locked_icon"/>

            </LinearLayout>


            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/login_center_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >


                <EditText
                    android:id="@+id/activity_reset_password_by_phone_confirm_new_password"
                    style="@style/login_editText"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_new_password_field"/>


                <ImageView
                    style="@style/login_icon_image_view"
                    android:src="@drawable/user_locked_icon"/>

            </LinearLayout>





        </LinearLayout>


        <TextView
            android:id="@+id/activity_reset_password_by_phone_reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/final_login_button"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/change_password_button"
            android:textColor="@color/color_white"
            android:textSize="16sp" />




    </LinearLayout>


</ScrollView>

