<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="64dp"
    android:layout_marginBottom="64dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/dialog_body_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/dialog_header_background"
        android:padding="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/dialog_icon_background">


            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/app_icon_white"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_color_primary"
            android:text="@string/disabled_account"/>


    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical" >


        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:background="@android:drawable/dialog_holo_light_frame"
            app:cardCornerRadius="25dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/mode_color_white_3">

            <TextView
                android:id="@+id/dialog_account_disabled_state"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:textColor="@color/text_color_black"
                android:textSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeTextType="uniform"
                android:autoSizeStepGranularity="1sp"
                android:text="@string/contact_support_to_enable_your_account_again"/>

        </androidx.cardview.widget.CardView>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/dialog_account_disabled_close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textColor="@color/text_color_white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingStart="32dp"
                    android:textAllCaps="true"
                    android:paddingEnd="32dp"
                    android:background="@drawable/final_primary_button"
                    android:text="@string/close_button"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/dialog_account_disabled_contact_support_button_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/dialog_account_disabled_contact_support_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textColor="@color/text_color_white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingStart="24dp"
                    android:textAllCaps="true"
                    android:paddingEnd="24dp"
                    android:background="@drawable/final_primary_button"
                    android:text="@string/contact_support_button"/>

            </LinearLayout>

        </LinearLayout>







    </LinearLayout>




</LinearLayout>

