<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:elevation="0dp"
            android:background="@color/mode_color_white">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:textColor="@color/text_color_black"
                    android:paddingEnd="72dp"
                    android:paddingStart="0dp"
                    android:textSize="20sp"/>




                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp">

                    <ImageView
                        android:id="@+id/activity_main_notification_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingStart="4dp"
                        android:paddingEnd="0dp"
                        android:background="@drawable/ripple_notification_background"
                        android:src="@drawable/notification_icon"/>

                    <ImageView
                        android:id="@+id/activity_main_notification_red_dot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/notification_red_dot"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                </RelativeLayout>



            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color">


            <FrameLayout
                android:id="@+id/main_activity_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


            <LinearLayout
                android:id="@+id/main_activity_bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:padding="8dp"
                android:background="@drawable/bottom_navigation">


                <LinearLayout
                    style="@style/bottom_layout_for_main_linear">


                    <LinearLayout
                        android:id="@+id/activity_main_bottom_item_counting"
                        style="@style/bottom_layout_for_image_layout"
                        android:background="@drawable/circle_navigation_tables">


                        <ImageView
                            android:id="@+id/activity_main_profile_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/profile_icon"/>


                    </LinearLayout>

                    <TextView
                        style="@style/bottom_layout_for_text_view"
                        android:text="@string/bottom_items_counting"/>



                </LinearLayout>

                <LinearLayout
                    style="@style/bottom_layout_for_main_linear">


                    <LinearLayout
                        android:id="@+id/activity_main_bottom_item_salaries"
                        style="@style/bottom_layout_for_image_layout"
                        android:background="@drawable/circle_navigation_tasks">


                        <ImageView
                            android:id="@+id/activity_main_tasks_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/tasks_icon"/>


                    </LinearLayout>

                    <TextView
                        style="@style/bottom_layout_for_text_view"
                        android:text="@string/bottom_items_employee"/>



                </LinearLayout>


                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"/>




                <LinearLayout
                    style="@style/bottom_layout_for_main_linear">


                    <LinearLayout
                        android:id="@+id/activity_main_bottom_item_patients"
                        style="@style/bottom_layout_for_image_layout"
                        android:background="@drawable/circle_navigation_done">


                        <ImageView
                            android:id="@+id/activity_main_done_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/done_icon"/>


                    </LinearLayout>

                    <TextView
                        style="@style/bottom_layout_for_text_view"
                        android:text="@string/bottom_items_patients"/>



                </LinearLayout>

                <LinearLayout
                    style="@style/bottom_layout_for_main_linear">


                    <LinearLayout
                        android:id="@+id/activity_main_bottom_item_settings"
                        style="@style/bottom_layout_for_image_layout"
                        tools:background="@drawable/circle_navigation_settings">


                        <ImageView
                            android:id="@+id/activity_main_setting_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/settings_icon"/>


                    </LinearLayout>

                    <TextView
                        style="@style/bottom_layout_for_text_view"
                        android:text="@string/bottom_items_settings"/>



                </LinearLayout>




            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="8dp"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/activity_main_bottom_item_home"
                    style="@style/bottom_layout_for_image_layout"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/circle_navigation_home">


                    <ImageView
                        android:id="@+id/activity_main_home_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:tint="@color/white"
                        android:src="@drawable/home_icon"/>


                </LinearLayout>

                <TextView
                    style="@style/bottom_layout_for_text_view"
                    android:text="@string/bottom_items_home"
                    android:layout_marginTop="4dp"/>



            </LinearLayout>




        </RelativeLayout>

</com.google.android.material.appbar.AppBarLayout>
